<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FuturamaAgain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="registration">Registration</string>
    <string name="robots">Robots</string>
    <string name="mutants">Mutants</string>
    <string name="humans">Humans</string>
</resources>